Node noindex 7.x-1.x
by naxoc: Added a description to the permission and added an isset() so we dont get warnings.
by naxoc: Added an implementation of hook_node_insert so new nodes can have the noindex set upon creation.