@@ -1,0 +1,3 @@
+'administer node_noindex':
+  title: 'administer node_noindex'
+  description: 'Administer node noindex'
